# fuzzy-multi-dict

./: .gitignore  .pre-commit-config.yaml  README.md  gen_doc.yaml  mypy.ini  pyproject.toml  requirements.txt  tox.ini
docs/: GENERAL_INFO.MD  __init__.MD  fuzzy_multi_dict.MD
examples/: semi_stracted_data_storage.py  semistructed_datastorage.py  spell_checker.py
fuzzy_multi_dict/: __init__.py  fuzzy_multi_dict.py
tests/: test_fuzzy_multi_dict.py
